kubernetes/apps/kube-system/cilium/app/networking.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  annotations:
    external-dns.kubernetes.io/hostname: k8s.${SECRET_DOMAIN}
    io.cilium/lb-ipam-ips: 10.10.2.20
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - port: 6443
