kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  hostnames: ["${SUBDOMAIN}.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 8081
